Wiola/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,300;1,900&display=swap');
*,
*::after,
*::before {
    margin: 0;
    padding: 0;
    box-sizing: inherit;
}


/****************************************************************************************/


/******************************** GLOBAL STYLESS ***************************************/


/***************************************************************************************/

html {
    font-size: 70%;
    /* 10px */
    /* overflow: hidden; */
}

body {
    font-family: 'Roboto', sans-serif;
    font-weight: 400;
    /* overflow: hidden; */
    box-sizing: border-box;
}

h2 {
    color: black;
    font-size: 2.6rem;
    font-family: sans-serif;
    font-weight: 900;
}

a {
    text-decoration: none;
}

.row {
    max-width: 100rem;
    margin: 0 auto;
}

.custom-row{
    margin-left: 10.5rem;
}



/****************************************************************************************/


/******************************** HEADER STYLES***************************************/


/***************************************************************************************/

header {
    background-image: linear-gradient(to top right, #4fcf8fb6, #4fcf8f), url('/Images/headerback.webp');
    height: 100vh;
    background-position: center;
    background-size: cover;
    /* overflow: hidden; */
    border-bottom-left-radius: 30%;
}

nav {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    padding: 3rem;
    align-items: center;
    justify-content: space-between;
}

nav>h6 {
    font-size: 2.5rem;
    font-weight: 900;
    color: white;
    line-height: 100%;
    letter-spacing: 1px;
}

.custom-w {
    font-size: 3rem;
    color: rgb(247, 171, 115);
}

.nav-items {
    list-style-type: none;
}

.nav-items li {
    display: inline;
    margin-right: 2rem;
}

.nav-items li a {
    font-size: 1.5rem;
    color: white;
    font-weight: 500;
}

.signup {
    background-color: white;
    color: orange !important;
    padding: 1.0rem 4rem;
    border-radius: 3rem;
    -webkit-border-radius: 3rem;
    -moz-border-radius: 3rem;
    -ms-border-radius: 3rem;
    -o-border-radius: 3rem;
}

.hero__stage {
    padding: 1rem;
    font-size: 1.3rem;
    display: inline-block;
    /* position: relative; */
    /* margin-left: 5rem; */
}

.hero__stage--heading {
    width: 50rem;
    padding: 2rem;
    color: white;
}

.hero__stage--heading h4 {
    font-size: 3.5rem;
    font-weight: bolder;
    font-family: sans-serif;
    margin-bottom: 2rem;
}

.hero__stage--heading p {
    font-size: 1.2rem;
    font-weight: 300;
    margin-bottom: 4rem;
    position: relative;
    letter-spacing: .09rem;
    font-weight: bold;
}

.hero__stage--heading p::after {
    content: "";
    width: 12rem;
    height: .2rem;
    position: absolute;
    background-color: rgba(255, 255, 255, 0.678);
    margin: 5rem 0;
    left: 0;
}

.heading__getStarted {
    margin-top: 4rem;
    background-color: white;
    color: black;
    display: inline-block;
    width: 60%;
    padding: 1.3rem;
    position: relative;
    border-radius: 2rem;
    -webkit-border-radius: 2rem;
    -moz-border-radius: 2rem;
    -ms-border-radius: 2rem;
    -o-border-radius: 2rem;
}

.heading__getStarted input[type="email"] {
    outline: none;
    border: none;
    text-align: center;
}

.heading__getStarted a {
    background-color: rgb(247, 171, 115);
    padding: .9rem 3rem;
    border-radius: 2rem;
    cursor: pointer;
    margin-left: 2.9rem;
    position: absolute;
    top: 0.4rem;
    right: 0.3rem;
    color: white;
    -webkit-border-radius: 2rem;
    -moz-border-radius: 2rem;
    -ms-border-radius: 2rem;
    -o-border-radius: 2rem;
}

.hero__box--art {
    /* background-color: yellow; */
}

.art__box--firstDrawing {
    position: absolute;
    top: 10rem;
    right: 30rem;
}

.art__box--secondDrawing {
    position: absolute;
    top: 20rem;
    right: 2rem;
}

.art_placeholder {
    width: 23rem;
    height: 40rem;
    background-color: white;
    border-radius: 2rem;
    -webkit-border-radius: 2rem;
    -moz-border-radius: 2rem;
    -ms-border-radius: 2rem;
    -o-border-radius: 2rem;
    padding: 1rem;
}

.inner_holder {
    width: 100%;
    height: 100%;
    position: relative;
}

.inner_holder::before {
    content: "";
    position: absolute;
    background-color: white;
    width: 9rem;
    height: 2rem;
    border-radius: 4rem;
    left: 6rem;
    top: -0.7rem;
    -moz-border-radius: 4rem;
    -ms-border-radius: 4rem;
    -o-border-radius: 4rem;
}

.inner__holder--top-section {
    height: 65%;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 10px 10px 0 0;
    -webkit-border-radius: 10px 10px 0 0;
    -moz-border-radius: 10px 10px 0 0;
    -ms-border-radius: 10px 10px 0 0;
    -o-border-radius: 10px 10px 0 0;
}

.first-top-bg {
    background-color: pink;
}

.second-top-bg {
    background-color: #f4c800;
}

.image-shadow {
    filter: drop-shadow(30px 10px 2px #000000);
    -webkit-filter: drop-shadow(30px 10px 2px #000000);
    transform: rotate(-5deg);
    -webkit-transform: rotate(-5deg);
    -moz-transform: rotate(-5deg);
    -ms-transform: rotate(-5deg);
    -o-transform: rotate(-5deg);
}

.first-top-image {
    width: 400px;
    height: auto;
}

.second-top-image {
    width: 150px;
    height: auto;
    transform: translateY(6rem);
    -webkit-transform: translateY(6rem);
    -moz-transform: translateY(6rem);
    -ms-transform: translateY(6rem);
    -o-transform: translateY(6rem);
}

.inner__holder--bottom-section {
    background-color: rgb(219, 218, 218);
    height: 35%;
    padding: 10px;
    color: rgb(133, 126, 126);
    font-size: 1.1rem;
    letter-spacing: .1rem;
    border-radius: 0 0 10px 10px;
    -webkit-border-radius: 0 0 10px 10px;
    -moz-border-radius: 0 0 10px 10px;
    -ms-border-radius: 0 0 10px 10px;
    -o-border-radius: 0 0 10px 10px;
}


/****************************************************************************************/


/******************************** WHY CHOOSE SECTION***************************************/


/***************************************************************************************/

.section__why {
    padding: 80px 0;
}

.question-mark {
    width: 5rem;
    height: 5rem;
    border-radius: 50%;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    -ms-border-radius: 50%;
    -o-border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 2.1rem;
    border: 2px solid green;
    margin-bottom: 2rem;
}

.carousel__container{
    margin: 6rem 0 6rem 7rem;
    height: 35rem;


}

.carousel__slide{
    width: 22%;
    height:100% ;
    font-size: 1.2rem;
    padding: 3rem 2rem;
    cursor: pointer;
    float: left;

    perspective: 150rem;
    border-radius: .9rem;
    border: 1px solid rgb(211, 206, 206);
    box-shadow: 0 1rem 1rem rgba(160, 156, 156, 0.541);
    transition: all ease-out .5s;
    backface-visibility: hidden;
}

.carousel__slide:not(:last-child){
    margin-right: 3rem;
}

.slide__icon{
    padding: .9rem;
    background-color: rgb(247, 171, 115);
    display: inline-block;
    border-radius: 50%;
    margin-bottom: 2.0rem;
    
}
.slide__icon i{
    font-size: 1.6rem;
    color: rgb(66, 50, 39);
    vertical-align: middle;
}

.slide__heading{
    font-size: 1.6rem;
    font-family: sans-serif;
    margin-bottom: 1.5rem;
    position: relative;
    padding-bottom: 1rem;
}
.slide__heading::after{
    content: " ";
    position: absolute;
    top: 3rem;
    left: 0;
    width: 3rem;
    height: .13rem;
    background-color: rgb(133, 126, 126);
}

.slide__subheading{
  
    letter-spacing: 1px;
    font-weight: 100;
    margin-bottom: 1.5rem;
}

.slide__button{
    text-align: center;
    display: block;
    padding: 1.3rem 1rem;
    border: 1px solid rgb(211, 206, 206);
    border-radius: 2rem;
    font-weight: 400;
    color: inherit;
    letter-spacing: 1px;
}
.slide__button i{
    margin-left: 3.5rem;
}

.carousel__slide:hover{
    transform: translateY(-1.05rem) scale(1.01);
    /* transform: rotateY(-180deg); */
    box-shadow: 0 1rem 1rem rgba(160, 156, 156, 0.89);
    background-color: #4fcf8f;
    color: white;
}

.carousel__slide:hover .slide__button{
    background-color:  rgb(247, 171, 115);
    border: none;
    
}
/* .carousel__slide:hover .slide__icon{
    box-shadow: 1rem 1rem 1rem rgba(160, 156, 156, 0.89);
    
    
} */
.carousel__controls{
    /* background-color: red; */
    float: right;
    margin-right: 10rem;
    padding: .5rem;
    display: inline-block;
}
.carousel__control__button{
    width: 50px;
    height: 50px;
    text-align: center;
    box-shadow: 0 1rem 5rem rgba(43, 38, 38, 0.144);
    border-radius: 50%;
    background-color: orange;
    cursor: pointer;
    border: none;
    transition: all 0.5s;
}
.carousel__control__button:focus{
    outline: none;

}
.carousel__control__button i{
    color: white;
}

